# clopy

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/application/: clipboard_service.rs  dto.rs  mod.rs
src/domain/: clipboard_item.rs  clipboard_repository.rs  mod.rs
src/infrastructure/: config.rs  file_clipboard_repository.rs  mod.rs  sqlite_clipboard_repository.rs
src/interface/: cli.rs  mod.rs
