[package]
name = "clopy-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.4", features = ["csr"] }
serde = { version = "1.0.188", features = ["derive"] }
serde-wasm-bindgen = "0.6.0"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "json", "time"] }


[workspace]
members = ["src-tauri"]
